[FIX] change alignment for icons in bigIconText element

--- a/dev/styles/main/contentElements/bigIconTextButton.less
+++ b/dev/styles/main/contentElements/bigIconTextButton.less
@@ -31,6 +31,8 @@
 
 .big-icon-text-btn__icon {
     padding: 30px;
+    padding-left: 31px;
+    padding-right: 29px;
     border: 2px solid tint(@main-color, 70%);
     color: @main-color;
     border-radius: 55px;
